add ddos and cc

--- a/rules/REQUEST-913-SCANNER-DETECTION.conf
+++ b/rules/REQUEST-913-SCANNER-DETECTION.conf
@@ -30,17 +30,12 @@ SecRule TX:EXECUTING_PARANOIA_LEVEL "@lt 1" "id:913012,phase:2,pass,nolog,skipAf
 # 913101 - scripting/generic HTTP clients (data file scripting-user-agents.data)
 # 913102 - web crawlers/bots (data file crawlers-user-agents.data)
 #
-
-
-
 SecRule REQUEST_HEADERS:User-Agent "@pmFromFile scanners-user-agents.data" \
     "id:913100,\
     phase:2,\
     block,\
     capture,\
     t:none,t:lowercase,\
-    
-    
     msg:'Found User-Agent associated with security scanner',\
     logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}',\
     tag:'application-multi',\
@@ -87,7 +82,7 @@ SecRule REQUEST_HEADERS_NAMES|REQUEST_HEADERS "@pmf scanners-headers.data" \
 
 
 
-SecRule REQUEST_HEADERS|REQUEST_FILENAME|ARGS "@pmf scanners-urls.data" \
+SecRule REQUEST_FILENAME|ARGS "@pmf scanners-urls.data" \
     "id:913120,\
     phase:2,\
     block,\
