--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 SRC=$(wildcard *.c  machine-learning/*.c libinjection/*.c waf/*.c foreign/*.c libev/ev.c libev/event.c )
 LIB=-lssl -lcrypto -lm -lrt -lpcre
 OBJ=$(addprefix ./, $(addsuffix .o, $(basename $(SRC))))
-TARGET=hihttps
+TARGET=aihttps
 all: $(TARGET)
 $(TARGET): $(SRC)
 	$(CC)  -o $@  $^ $(CFLAGS) $(LDFLAGS) $(LIB)
