--- a/rules/REQUEST-932-APPLICATION-ATTACK-RCE.conf
+++ b/rules/REQUEST-932-APPLICATION-ATTACK-RCE.conf
@@ -577,7 +577,7 @@ SecRule FILES|REQUEST_HEADERS:X-Filename|REQUEST_HEADERS:X_Filename|REQUEST_HEAD
         "@pmf restricted-upload.data" \
     "id:932180,\
     phase:2,\
-    block,\
+    drop,\
     capture,\
     t:none,t:lowercase,\
     logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}',\
@@ -701,3 +701,28 @@ SecRule TX:EXECUTING_PARANOIA_LEVEL "@lt 4" "id:932018,phase:2,pass,nolog,skipAf
 # -= Paranoia Levels Finished =-
 #
 SecMarker "END-REQUEST-932-APPLICATION-ATTACK-RCE"
+
+
+SecRule REQUEST_URI|REQUEST_COOKIES|REQUEST_HEADERS_NAMES|ARGS_NAMES|ARGS "@rx \$(.*)jndi:" \
+    "id:932188,\
+    phase:2,\
+    block,\
+    capture,\
+    t:none,t:urlDecode,t:urlDecodeUni,t:normalizePath,t:cmdLine,\
+    msg:'Log4j Remote Command Execution',\
+    logdata:'Matched Data: %{TX.0} found within %{MATCHED_VAR_NAME}: %{MATCHED_VAR}',\
+    tag:'application-multi',\
+    tag:'language-shell',\
+    tag:'platform-unix',\
+    tag:'attack-rce',\
+    tag:'OWASP_CRS/WEB_ATTACK/COMMAND_INJECTION',\
+    tag:'WASCTC/WASC-31',\
+    tag:'OWASP_TOP_10/A1',\
+    tag:'PCI/6.5.2',\
+    tag:'paranoia-level/3',\
+    ctl:auditLogParts=+E,\
+    severity:'CRITICAL',\
+    setvar:'tx.msg=%{rule.msg}',\
+    setvar:'tx.rce_score=+%{tx.critical_anomaly_score}',\
+    setvar:'tx.anomaly_score_pl3=+%{tx.critical_anomaly_score}',\
+    setvar:'tx.%{rule.id}-OWASP_CRS/WEB_ATTACK/RCE-%{MATCHED_VAR_NAME}=%{tx.0}'"
