--- a/config.cfg
+++ b/config.cfg
@@ -14,7 +14,7 @@ daemon = off                  #  关闭后台模式，方便调试
 pem-file = "server.pem"
 
 
-# 为了安全，请设置运行的用户组和权限，默认nobody，请确认系统存在有nobody，没有请换成root。
+# 为了安全，请设置降低运行的用户组和权限，默认nobody，请确认系统存在有nobody，没有请换成root，设置错误会导致进程不能启动。
 # user and group
 user = "nobody"
 group = "nobody"
